2003-12-17  Tim Waugh <twaugh@redhat.com>

	* driver/pxlmono.xml: Add pxlmono driver for HP LaserJet 5 (Red Hat
	bug #109378).

2003-12-16  Tim Waugh <twaugh@redhat.com>
 
	* printer/HP-LaserJet_1200.xml, printer/HP-LaserJet_4000.xml,
	  printer/HP-LaserJet_4050.xml, printer/HP-LaserJet_4_Plus.xml: Added
          autodetection information.

2003-12-15  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-Color_LaserJet_3500.xml: Corrected rating to
	  "Paperweight", no free software driver known yet for this
	  printer.

2003-12-10  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_3P_w_PCL5.xml: Switched recommended driver to
	  "gimp-print-ijs", as this printer does not support PJL and the
	  HPIJS driver always sends PJL commands.

2003-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_CX5400.xml,
	  printer/Epson-Stylus_Photo_R300.xml,
	  printer/Epson-Stylus_Photo_RX500.xml: Added new Epson inkjet 
	  printers.

	* printer/Epson-Stylus_CX6400.xml: Updated text.

	* printer/Epson-Stylus_CX8400.xml: Removed. This printer does not
	  exist.

2003-11-30  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.ppd: Fixed bug of InputSlot, Duplex, and
	  Resolution being ignored.

2003-11-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
	  printer/HP-LaserJet_1015.xml: Updated text and rating of the
	  LaserJet 101x series as they do not work reliably as PCL-5e
	  printers.

	* printer/Canon-S100.xml: Changed recommended driver to "bjc600",
	  this printer does not work correctly with GIMP-Print.

	* printer/Epson-Stylus_CX6400.xml: Updated text.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated "Dependencies" section.

	* USAGE: Fixed typo.

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>
