@@ -185,6 +185,12 @@
    <id>printer/DEC-LN07</id><!-- DEC LN07 -->
   </printer>
   <printer>
+   <id>printer/Dell-S2500</id>
+  </printer>
+  <printer>
+   <id>printer/Dell-M5200</id>
+  </printer>
+  <printer>
    <id>printer/Epson-EPL-5800PS</id>
   </printer>
   <printer>
