@@ -1,4 +1,7 @@
 2003-12-17  Tim Waugh <twaugh@redhat.com>
+ 
+	* printer/Dell-S2500.xml, printer/Dell-M5200.xml,
+	driver/Postscript.xml: New printers.
 
 	* driver/pxlmono.xml: Add pxlmono driver for HP LaserJet 5 (Red Hat
 	bug #109378).
